# ornitho-client-python

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  Pipfile  README.rst  lint.sh  pyproject.toml  setup.cfg  setup.py  tox.ini
examples/: entity.py  field.py  form.py  observation.py  place.py  protocol.py
examples/forms/: create_and_delete.py  playback.py
examples/observations/: create_and_delete.py
examples/observers/: current.py
examples/places/: find_closest_place.py  get.py  list.py
examples/site/: get.py
examples/species/: get.py  list.py
ornitho/: __init__.py  api_exception.py  api_requester.py
ornitho/model/: __init__.py  access.py  detail.py  entity.py  family.py  field.py  field_option.py  form.py  local_admin_unit.py  media.py  modification_type.py  observation.py  observer.py  place.py  playback.py  project.py  protocol.py  relation.py  right.py  site.py  species.py  taxo_group.py  territorial_unit.py
ornitho/model/abstract/: __init__.py  base_model.py  createable_model.py  deletable_model.py  listable_model.py  searchable_model.py  updateable_model.py
tests/: test_api_exception.py  test_api_requester.py
tests/model/: test_detail.py  test_entity.py  test_family.py  test_field.py  test_field_option.py  test_form.py  test_local_admin_unit.py  test_media.py  test_observation.py  test_observer.py  test_place.py  test_protocol.py  test_relation.py  test_right.py  test_site.py  test_species.py  test_taxonomic_group.py  test_territorial_unit.py
tests/model/abstract/: test_base_model.py  test_createable_model.py  test_deletable_model.py  test_listable_model.py  test_searchable_model.py  test_updateable_model.py
