[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ornitho"
version = "0.3.0"
description = "An ornitho API client"
authors = ["Patrick Lindel <lindel@dda-web.de>"]
license="MIT"
readme = "README.rst"
repository = "https://github.com/dda-dev/ornitho-client-python"
homepage = "https://github.com/dda-dev/ornitho-client-python"
keywords=[]
classifiers=[
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
requests-oauthlib = "*"
pytz = "*"
requests-cache = "^0.9.3"
docutils = "0.19"

[tool.poetry.dev-dependencies]
pytest = "*"
coverage = "*"
twine = "*"
autoflake = "*"
black = "*"
isort = "^5.0.0"
vulture = "*"
pytest-cov = "*"
tox = "*"
mypy = "*"

[tool.poetry.extras]
caching = ["requests-cache"]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = mypy, py37, py38, py39, py310, py311
isolated_build = True
skip_missing_interpreters = True

[testenv]
deps = pytest
commands = pytest

[testenv:mypy]
basepython = python3.8
deps = mypy
commands = mypy . --ignore-missing-imports  --exclude examples --install-types --non-interactive
skip_install = True
"""